@@ -1,16 +1,16 @@
-export(HangulAutomata)
-export(MorphAnalyzer)
-export(SimplePos09)
-export(SimplePos22)
 export(backupUsrDic)
 export(convertHangulStringToJamos)
 export(convertHangulStringToKeyStrokes)
 export(doKoMorph)
 export(extractNoun)
+export(HangulAutomata)
 export(is.hangul)
 export(is.jamo)
 export(mergeUserDic)
+export(MorphAnalyzer)
 export(reloadAllDic)
 export(restoreUsrDic)
+export(SimplePos09)
+export(SimplePos22)
 import("bitops")
 import("rJava")
