@@ -12,6 +12,8 @@
   dictionary directory.
 }
 \examples{
+\dontrun{
+## This codes can not be run if you don't have encoding system which can en/decode Hangul(ex) CP949, EUC-KR, UTF-8).
 dicpath <- paste(system.file(package="KoNLP"), "/dics/data/kE/dic_user2.txt", sep="")
 newdic <- read.table(dicpath, sep="\\t", header=FALSE, fileEncoding="UTF-8", stringsAsFactors=FALSE)
 mergeUserDic(newdic)
@@ -20,6 +22,6 @@ backupUsrDic(ask=FALSE)
 ## restore from backup directory
 restoreUsrDic(ask=FALSE)
 ## reloading new dictionary
-reloadAllDic()
+reloadAllDic()}
 }
 
