@@ -2,6 +2,7 @@ Version 0.73
 ------------------------------------------------------------------------------
   * add messages on is.hangul and is.jamo if input is UTF-8.
   * set -Xmx512m when the time user system is poor on memory. 
+  * fix issue "Continuous "[:space:]" in sentence can make infinite wait."
 
 
 Version 0.7
